Fix whitespaces on labels on page

--- a/los_deberes_de_irene/static/css/page.css
+++ b/los_deberes_de_irene/static/css/page.css
@@ -116,6 +116,10 @@ text[data-font-name="dyslexia"] {
   font-family: "OpenDyslexic";
 }
 
+text {
+    white-space: pre;
+}
+
 text[data-color="black"] {
   fill: #000000;
 }
